#Fixed (a) dates in email notifications to be site's local time instead of UTC, (b) Corrected recent fix about category menu item persistent/initial filters that made persistent/initial filters visible despite configuration, (c) Further improved fcpagenav pluging to display a disabled next/previous button instead of hiding it

--- a/trunk/plugins/flexicontent_fields/fcpagenav/fcpagenav.css
+++ b/trunk/plugins/flexicontent_fields/fcpagenav/fcpagenav.css
@@ -31,6 +31,20 @@
 	font-weight: bold;
 }
 
+.flexi.pagination span.noprevnext {
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	user-select:none;
+	text-decoration: none;
+	display: inline-block;
+	border: 1px solid gray;
+  border-radius: 6px;
+  background: white;
+  color: gray;
+  padding: 3px 6px;
+	font-weight: bold;
+}
+
 .flexi.pagination a {
 	text-decoration: none;
 	display: inline-block;
